--- a/Akinator/templates/interface/prediction.html
+++ b/Akinator/templates/interface/prediction.html
@@ -32,7 +32,7 @@
             box-shadow: 0 8px 24px rgba(0,0,0,0.1);
             opacity: 0.95;
         }
-        .jigglypuff {
+        .poke-img{
             position: absolute;
             left: 50%;
             top: 48%;
